--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -90,29 +90,30 @@
               </div>
             </div>
             <div id="tab-2" class="tab active">
-              <div class="content-block">
-
-                <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-clock-o fa-2x"></i><br>Wakey Wakey</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-coffee fa-2x"></i><br>Eggs Bacon Toast & Coffee</a></div>
+              <div class="content-block content-block-menu">
+                <!--<div class="content-block-inner">-->
+                  <div class="row">
+                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-clock-o fa-2x"></i><br>Wakey Wakey</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-coffee fa-2x"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                  </div>
                 </div>
-                <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                </div>
-                <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                </div>
-                <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                </div>
-              </div>
+              <!--</div>-->
             </div>
             <div id="tab-3" class="tab">
               <div class="content-block">
