--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -95,7 +95,7 @@
                   <div class="row">
                     <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
                     <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-clock-o fa-2x"></i><br>Wakey Wakey</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-coffee fa-2x"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
+                    <div class="col-33"><a href="#" class="button button-red button-round button-tall"><br><i class="fa fa-coffee fa-2x"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
                   </div>
                   <div class="row">
                     <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
