--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -90,27 +90,27 @@
               </div>
             </div>
             <div id="tab-2" class="tab active">
-              <div class="content-block content-block-menu">
+              <div class="content-block-inner content-block-menu">
                 <!--<div class="content-block-inner">-->
                   <div class="row">
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-clock-o fa-2x"></i><br>Wakey Wakey</a></div>
-                    <div class="col-33"><a href="#" class="button button-red button-round button-tall"><br><i class="fa fa-coffee fa-2x"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-clock-o fa-2x"></i><br>Wakey Wakey</a></div>
+                    <div class="col-33"><a href="#" class="button button-red button-round button-tall"><i class="fa fa-coffee fa-2x"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
                   </div>
                   <div class="row">
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>Antidistablishmentariianism</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>I code therefore I am!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>Think before you jump I think!</a></div>
                   </div>
                   <div class="row">
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>Point being make up stuff to take up space and see what happens</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
                   </div>
                   <div class="row">
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall"><br><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>Now is the time</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>For all good men</a></div>
+                    <div class="col-33"><a href="#" class="button button-round button-tall"><i class="fa fa-beer fa-2x"></i><br>To help fight the man</a></div>
                   </div>
                 </div>
               <!--</div>-->
@@ -149,10 +149,60 @@
             </div>
             <div id="tab-7" class="tab">
               <div class="content-block">
-                <p>This is tab 4 content</p>
-                <p>Fusce luctus turpis nunc, id porta orci blandit eget. Aenean sodales quam nec diam varius, in ornare ipsum condimentum. Aenean eleifend, nulla sit amet volutpat adipiscing, ligula nulla pharetra risus, vitae consequat leo tortor eu nunc. Vivamus at fringilla metus. Duis neque lectus, sagittis in volutpat a, pretium vel turpis. Nam accumsan auctor libero, quis sodales felis faucibus quis. Etiam vestibulum sed nisl vel aliquet. Aliquam pellentesque leo a lacus ultricies scelerisque. Vestibulum vestibulum fermentum tincidunt. Proin eleifend metus non quam pretium, eu vehicula ipsum egestas. Nam eget nibh enim. Etiam sem leo, pellentesque a elit vel, egestas rhoncus enim. Morbi ultricies adipiscing tortor, vitae condimentum lacus hendrerit nec. Phasellus laoreet leo quis purus elementum, ut fringilla justo eleifend. Nunc ultricies a sapien vitae auctor. Aliquam id erat elementum, laoreet est et, dapibus ligula.</p>
-                <p>Fusce luctus turpis nunc, id porta orci blandit eget. Aenean sodales quam nec diam varius, in ornare ipsum condimentum. Aenean eleifend, nulla sit amet volutpat adipiscing, ligula nulla pharetra risus, vitae consequat leo tortor eu nunc. Vivamus at fringilla metus. Duis neque lectus, sagittis in volutpat a, pretium vel turpis. Nam accumsan auctor libero, quis sodales felis faucibus quis. Etiam vestibulum sed nisl vel aliquet. Aliquam pellentesque leo a lacus ultricies scelerisque. Vestibulum vestibulum fermentum tincidunt. Proin eleifend metus non quam pretium, eu vehicula ipsum egestas. Nam eget nibh enim. Etiam sem leo, pellentesque a elit vel, egestas rhoncus enim. Morbi ultricies adipiscing tortor, vitae condimentum lacus hendrerit nec. Phasellus laoreet leo quis purus elementum, ut fringilla justo eleifend. Nunc ultricies a sapien vitae auctor. Aliquam id erat elementum, laoreet est et, dapibus ligula.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum mi quis felis scelerisque faucibus. Aliquam ut commodo justo. Mauris vitae pharetra arcu. Sed tincidunt dui et nibh auctor pretium. Nam accumsan fermentum sem. Suspendisse potenti. Nulla sed orci malesuada, pellentesque elit vitae, cursus lorem. Praesent et vehicula sapien, ut rhoncus quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vitae mi nec lorem aliquet venenatis quis nec nibh. Aenean sit amet leo ligula. Fusce in massa et nisl dictum ultricies et vitae dui. Sed sagittis quis diam sed lobortis. Donec in massa pharetra, tristique purus vitae, consequat mauris. Aliquam tellus ante, pharetra in mattis ut, dictum quis erat.</p>
+                <div class="list-block">
+                  <ul>
+                    <li>
+                      <a href="#" class="item-link">
+                        <div class="item-content">
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-inner">
+                            <div class="item-title">Modals</div>
+                          </div>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="item-link">
+                        <div class="item-content">
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-inner">
+                            <div class="item-title">Modals</div>
+                          </div>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="item-link">
+                        <div class="item-content">
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-inner">
+                            <div class="item-title">Modals</div>
+                          </div>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="item-link">
+                        <div class="item-content">
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-inner">
+                            <div class="item-title">Modals</div>
+                          </div>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="item-link">
+                        <div class="item-content">
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-inner">
+                            <div class="item-title">Modals</div>
+                          </div>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
