--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -84,10 +84,68 @@
         <div class="page-content">
           <div class="tabs">
             <div id="tab-1" class="tab">
-              <div class="content-block-title">HOME</div>
-              <div class="content-block">
-                <p>Active workspace shown here</p>
+              <div class="content-block-title">WORKSPACE</div>
+              <div class="list-block media-list">
+                <ul>
+                  <li class="swipeout">
+                    <div class="swipeout-content"><a href="#" class="item-link item-content">
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">Facebook</div>
+                          <div class="item-after">17:14</div>
+                        </div>
+                        <div class="item-subtitle">New messages from John Doe</div>
+                        <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+                      </div></a></div>
+                    <div class="swipeout-actions">
+                      <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete">Delete</a></div>
+                    </div>
+                  </li>
+                  <li class="swipeout">
+                    <div class="swipeout-content"><a href="#" class="item-link item-content">
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">John Doe (via Twitter)</div>
+                          <div class="item-after">17:11</div>
+                        </div>
+                        <div class="item-subtitle">John Doe (@_johndoe) mentioned you on Twitter!</div>
+                        <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+                      </div></a></div>
+                    <div class="swipeout-actions">
+                      <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete">Delete</a></div>
+                    </div>
+                  </li>
+                  <li class="swipeout">
+                    <div class="swipeout-content"><a href="#" class="item-link item-content">
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">Facebook</div>
+                          <div class="item-after">16:48</div>
+                        </div>
+                        <div class="item-subtitle">New messages from John Doe</div>
+                        <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+                      </div></a></div>
+                    <div class="swipeout-actions">
+                      <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a></div>
+                    </div>
+                  </li>
+                  <li class="swipeout">
+                    <div class="swipeout-content"><a href="#" class="item-link item-content">
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">John Doe (via Twitter)</div>
+                          <div class="item-after">15:32</div>
+                        </div>
+                        <div class="item-subtitle">John Doe (@_johndoe) mentioned you on Twitter!</div>
+                        <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+                      </div></a></div>
+                    <div class="swipeout-actions">
+                      <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete">Delete</a></div>
+                    </div>
+                  </li>
+                </ul>
               </div>
+
             </div>
             <div id="tab-2" class="tab active">
               <div class="content-block-inner content-block-menu">
@@ -116,12 +174,15 @@
               <!--</div>-->
             </div>
             <div id="tab-3" class="tab">
-              <div class="content-block">
-                <p>This is tab 2 content</p>
-                <p>Ut ac lobortis lacus, non pellentesque arcu. Quisque sodales sapien malesuada, condimentum nunc at, viverra lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus eu pulvinar turpis, id tristique quam. Aenean venenatis molestie diam, sit amet condimentum nisl pretium id. Donec diam tortor, mollis in vehicula id, vehicula consectetur nulla. Quisque posuere rutrum mauris, eu rutrum turpis blandit at. Proin volutpat tortor sit amet metus porttitor accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut dapibus posuere dictum.</p>
-                <p>Fusce luctus turpis nunc, id porta orci blandit eget. Aenean sodales quam nec diam varius, in ornare ipsum condimentum. Aenean eleifend, nulla sit amet volutpat adipiscing, ligula nulla pharetra risus, vitae consequat leo tortor eu nunc. Vivamus at fringilla metus. Duis neque lectus, sagittis in volutpat a, pretium vel turpis. Nam accumsan auctor libero, quis sodales felis faucibus quis. Etiam vestibulum sed nisl vel aliquet. Aliquam pellentesque leo a lacus ultricies scelerisque. Vestibulum vestibulum fermentum tincidunt. Proin eleifend metus non quam pretium, eu vehicula ipsum egestas. Nam eget nibh enim. Etiam sem leo, pellentesque a elit vel, egestas rhoncus enim. Morbi ultricies adipiscing tortor, vitae condimentum lacus hendrerit nec. Phasellus laoreet leo quis purus elementum, ut fringilla justo eleifend. Nunc ultricies a sapien vitae auctor. Aliquam id erat elementum, laoreet est et, dapibus ligula.</p>
-                <p>Ut ac lobortis lacus, non pellentesque arcu. Quisque sodales sapien malesuada, condimentum nunc at, viverra lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus eu pulvinar turpis, id tristique quam. Aenean venenatis molestie diam, sit amet condimentum nisl pretium id. Donec diam tortor, mollis in vehicula id, vehicula consectetur nulla. Quisque posuere rutrum mauris, eu rutrum turpis blandit at. Proin volutpat tortor sit amet metus porttitor accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut dapibus posuere dictum.</p>
-              </div>
+
+              <form data-search-list=".search-here" data-search-in=".item-title" class="searchbar">
+                <div class="searchbar-input">
+                  <input type="search" placeholder="Search"/><a href="#" class="searchbar-clear"></a>
+                </div><a href="#" class="searchbar-cancel">Cancel</a>
+              </form>
+              <!--<div class="searchbar-overlay"></div>-->
+
+
             </div>
             <div id="tab-4" class="tab">
               <div class="content-block">
@@ -184,7 +245,7 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-green">27</span></i></div>
                           <div class="item-inner">
                             <div class="item-title">Modals</div>
                           </div>
@@ -194,7 +255,7 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-green">27</span></i></div>
                           <div class="item-inner">
                             <div class="item-title">Modals</div>
                           </div>
@@ -211,10 +272,10 @@
     </div>
 
     <!-- Bottom Toolbar-->
-    <div class="toolbar tabbar">
+    <div class="toolbar tabbar tabbar-labels">
       <div class="toolbar-inner">
         <!-- Toolbar links -->
-        <a href="#tab-1" class="tab-link"><i class="fa fa-home fa-lg"></i></a>
+        <a href="#tab-1" class="tab-link"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix"><span class="badge badge-green">27</span></i></a>
         <a href="#tab-2" class="tab-link active"><i class="fa fa-th fa-lg"></i></a>
         <a href="#tab-3" class="tab-link"><i class="fa fa-search fa-lg"></i></a>
         <a href="#tab-4" class="tab-link"><i class="fa fa-bookmark fa-lg"></i></a>
