--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -245,7 +245,7 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-green">27</span></i></div>
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-red">1</span></i></div>
                           <div class="item-inner">
                             <div class="item-title">Modals</div>
                           </div>
@@ -255,7 +255,7 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-green">27</span></i></div>
+                          <div class="item-media"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-black">2</span></i></div>
                           <div class="item-inner">
                             <div class="item-title">Modals</div>
                           </div>
