--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -215,9 +215,9 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-media"><i class="fa fa-male fa-lg"></i></i></div>
                           <div class="item-inner">
-                            <div class="item-title">Modals</div>
+                            <div class="item-title">Man</div>
                           </div>
                         </div>
                       </a>
@@ -225,9 +225,9 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-media"><i class="fa fa-female fa-lg"></i></i></div>
                           <div class="item-inner">
-                            <div class="item-title">Modals</div>
+                            <div class="item-title">Woman</div>
                           </div>
                         </div>
                       </a>
@@ -235,9 +235,9 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i></i></div>
+                          <div class="item-media"><i class="fa fa-glass fa-lg"></i></i></div>
                           <div class="item-inner">
-                            <div class="item-title">Modals</div>
+                            <div class="item-title">Plus</div>
                           </div>
                         </div>
                       </a>
@@ -245,9 +245,9 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-red">1</span></i></div>
+                          <div class="item-media"><i class="fa fa-magic fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-red">1</span></i></div>
                           <div class="item-inner">
-                            <div class="item-title">Modals</div>
+                            <div class="item-title">Magic</div>
                           </div>
                         </div>
                       </a>
@@ -255,9 +255,9 @@
                     <li>
                       <a href="#" class="item-link">
                         <div class="item-content">
-                          <div class="item-media"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-black">2</span></i></div>
+                          <div class="item-media"><i class="fa fa-child fa-lg"></i><i class="icon fa-badge-fix2"><span class="badge badge-black">2</span></i></div>
                           <div class="item-inner">
-                            <div class="item-title">Modals</div>
+                            <div class="item-title">Equals</div>
                           </div>
                         </div>
                       </a>
@@ -275,13 +275,13 @@
     <div class="toolbar tabbar tabbar-labels">
       <div class="toolbar-inner">
         <!-- Toolbar links -->
-        <a href="#tab-1" class="tab-link"><i class="fa fa-home fa-lg"></i><i class="icon fa-badge-fix"><span class="badge badge-green">27</span></i></a>
-        <a href="#tab-2" class="tab-link active"><i class="fa fa-th fa-lg"></i></a>
-        <a href="#tab-3" class="tab-link"><i class="fa fa-search fa-lg"></i></a>
-        <a href="#tab-4" class="tab-link"><i class="fa fa-bookmark fa-lg"></i></a>
-        <a href="#tab-5" class="tab-link"><i class="fa fa-book fa-lg"></i></a>
+        <a href="#tab-1" class="tab-link"><i class="fa fa-cloud fa-lg"></i><i class="icon fa-badge-fix"><span class="badge badge-green">27</span></i><span class="tabbar-label tabbar-label-fix2">Workspace</span></a>
+        <a href="#tab-2" class="tab-link active"><i class="fa fa-th fa-lg"></i><span class="tabbar-label tabbar-label-fix">Navigation</span></a>
+        <a href="#tab-3" class="tab-link"><i class="fa fa-search fa-lg"></i><span class="tabbar-label tabbar-label-fix">Search</span></a>
+        <a href="#tab-4" class="tab-link"><i class="fa fa-bookmark fa-lg"></i><span class="tabbar-label tabbar-label-fix">Favorites</span></a>
+        <a href="#tab-5" class="tab-link"><i class="fa fa-book fa-lg"></i><span class="tabbar-label tabbar-label-fix">History</span></a>
         <!--<a href="#tab-6" class="tab-link"><i class="fa fa-info-circle fa-lg"></i></a>-->
-        <a href="#tab-7" class="tab-link"><i class="fa fa-ellipsis-horizontal fa-lg"></i></a>
+        <a href="#tab-7" class="tab-link"><i class="fa fa-ellipsis-h fa-lg"></i><span class="tabbar-label tabbar-label-fix">More</span></a>
       </div>
     </div>
 
