--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -85,7 +85,7 @@
         <div class="page-content">
           <div class="tabs">
             <div id="tab-1" class="tab active">
-              <div class="content-block-title">ACTIVE WORKSPACE <a href="#" class="link icon-only app-cheers"><i class="fa fa-info-circle fa-inline"></i></a></div>
+              <div class="content-block-title"><a href="#" class="link icon-only app-cheers">ACTIVE WORKSPACE <i class="fa fa-info-circle fa-inline"></i></a></div>
               <div class="list-block media-list">
                 <ul>
                   <li class="swipeout">
